adicionando css e ajeitando busca